<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordActivity">
    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ropa_sans"
        android:text="@string/reset_password"
        android:textColor="@color/delicioum___color"
        android:textSize="50sp"
        android:layout_marginTop="120dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:fontFamily="@font/inter"
        android:text="@string/change_your_password"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:fontFamily="@font/inter"
        android:text="@string/create_a_new_password_ensure_it_differs_from_previous_ones_for_security"
        android:textColor="@color/black" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/password"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/icon_lock_24"
        android:drawableEnd="@drawable/icon_password_toggle"
        android:drawablePadding="10dp"
        android:fontFamily="@font/inter"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:lines="1"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/confirm_password"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/icon_lock_24"
        android:drawablePadding="10dp"
        android:drawableEnd="@drawable/icon_password_toggle"
        android:fontFamily="@font/inter"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="20"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/BTNUpdatePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_password"
        android:fontFamily="@font/ropa_sans"
        android:background="@drawable/btn_background_secondary"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        />
</LinearLayout>