<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ropa_sans"
        android:text="@string/sign_up"
        android:textColor="@color/delicioum___color"
        android:textSize="50sp"
        android:layout_marginTop="120dp"/>

    <EditText
        android:id="@+id/ETUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/username"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/icon_user_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/inter"
        android:hint="@string/username"
        android:inputType="text|textPersonName"
        android:lines="1"
        android:maxLength="20"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="60dp"/>

    <EditText
        android:id="@+id/ETForgetEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/email"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/icon_email_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/inter"
        android:hint="@string/email"
        android:inputType="text|textEmailAddress|textAutoComplete"
        android:lines="1"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/ETPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/password"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/icon_lock_24"
        android:drawableEnd="@drawable/icon_password_hide"
        android:drawablePadding="10dp"
        android:fontFamily="@font/inter"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:lines="1"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/ETConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/confirm_password"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/icon_lock_24"
        android:drawablePadding="10dp"
        android:drawableEnd="@drawable/icon_password_hide"
        android:fontFamily="@font/inter"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="20"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/already_has_an_account"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:alpha="0.8"
            />

        <TextView
            android:id="@+id/TVLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/login"
            android:textColor="@color/clickable" />

    </RelativeLayout>

    <RelativeLayout android:layout_height="wrap_content" android:layout_width="match_parent">
        <Button
            android:id="@+id/BTNSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:fontFamily="@font/ropa_sans"
            android:background="@drawable/btn_background_secondary"
            android:textColor="@android:color/white"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="80dp"
            android:textSize="20sp"
            />
    </RelativeLayout>

</LinearLayout>