<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordActivity">
    <TextView
        android:id="@+id/TVForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ropa_sans"
        android:text="@string/forget_password"
        android:textColor="@color/delicioum___color"
        android:textSize="50sp"
        android:layout_marginTop="120dp"/>

    <TextView
        android:id="@+id/TVDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:fontFamily="@font/inter"
        android:text="@string/please_enter_your_email_to_reset_the_password"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/TVTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:fontFamily="@font/inter"
        android:text="@string/your_email"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/ETForgetEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/email"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/icon_email_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/inter"
        android:hint="@string/email"
        android:inputType="text|textEmailAddress|textAutoComplete"
        android:lines="1"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/BTNResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Reset Password"
        android:fontFamily="@font/ropa_sans"
        android:background="@drawable/btn_background_secondary"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:fontFamily="@font/inter"
            android:text="Remember password"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:alpha="0.8"
            />

        <TextView
            android:id="@+id/TVLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:focusable="true"
            android:text="Log In"
            android:textColor="@color/clickable" />

    </RelativeLayout>
</LinearLayout>